--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f67ea39d40471fb730dc44807deb329e",
+    "/app.css": "/app.css?id=b00a4fe5d8140a63e9b3a5de0ae20d71"
 }
