--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=buku_tamu
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=bukutamu
+DB_USERNAME=Ishak
+DB_PASSWORD=namasayaishak
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
